[package]
name = "app"
version = "0.0.0"
publish = false
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
draco = { git = "https://github.com/utkarshkukreti/draco.git", rev = "32419ec" }
wasm-bindgen = "0.2"
js-sys = "0.3"
ulid = { version = "0.4", features = [ "serde" ] }
indexmap = { version = "1", features = [ "serde-1" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "Storage",
]
